# slimybot

./: Cargo.toml  README.md  config.toml  justfile
.github/workflows/: shuttle.yml
src/: commands.rs  config.rs  config.toml  eventhandler.rs  main.rs  state.rs
src/commands/: admin.rs  embed.rs  log.rs  moderators.rs  roles.rs
src/config/: autowrite.rs  parse.rs
